test/corpus/function_application.txt
================================================================================
function application
================================================================================

[
  x(1,2,y=1),
  y(x=2),
  z(x=4,y=10),
]

--------------------------------------------------------------------------------

(source_file
  (array
    (function_application
      (id)
      (args
        (number)
        (number)
        (default_arg
          (id)
          (number))))
    (function_application
      (id)
      (args
        (default_arg
          (id)
          (number))))
    (function_application
      (id)
      (args
        (default_arg
          (id)
          (number))
        (default_arg
          (id)
          (number))))))
