test/corpus/insup.txt
================================================================================
in super
================================================================================

{
  a:: 1,
} {
  t1: "a" in super,
  f2: "a" + "a" in super,
  f3: "a" == "a" in super,
  aa: "a" <= "a" || "a" in super,
}

--------------------------------------------------------------------------------

(source_file
  (object_addition
    (object
      (member
        (field
          (fieldname
            (id))
          (hsep)
          (value
            (number)))))
    (object
      (member
        (field
          (fieldname
            (id))
          (hsep)
          (value
            (in_super_expr
              (string)))))
      (member
        (field
          (fieldname
            (id))
          (hsep)
          (value
            (in_super_expr
              (binary_expr
                (string)
                (string))))))
      (member
        (field
          (fieldname
            (id))
          (hsep)
          (value
            (binary_expr
              (string)
              (in_super_expr
                (string))))))
      (member
        (field
          (fieldname
            (id))
          (hsep)
          (value
            (binary_expr
              (binary_expr
                (string)
                (string))
              (in_super_expr
                (string)))))))))
