test/corpus/object_addition.txt
================================================================================
object addition
================================================================================
local x = { x: 1 };

[
  { x: 1 } { y : 2 },
  x { y : 2 },
]

--------------------------------------------------------------------------------

(source_file
  (bind_expr
    (bind
      (id)
      (object
        (member
          (field
            (fieldname
              (id))
            (hsep)
            (value
              (number))))))
    (array
      (object_addition
        (object
          (member
            (field
              (fieldname
                (id))
              (hsep)
              (value
                (number)))))
        (object
          (member
            (field
              (fieldname
                (id))
              (hsep)
              (value
                (number))))))
      (object_addition
        (id)
        (object
          (member
            (field
              (fieldname
                (id))
              (hsep)
              (value
                (number)))))))))
